Fixing some FindBugs recommendations.