@@ -12,6 +12,22 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ *
+ * ------------------------------------------------------
+ * Updates made after January 1, 2015 are :
+ * Copyright 2015 The Ariah Group, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.kuali.kra.proposaldevelopment.lookup.keyvalue;
 
@@ -35,20 +51,22 @@ import static org.kuali.kra.infrastructure.KraServiceLocator.getService;
 import static org.kuali.kra.logging.BufferedLogger.info;
 
 public class ProposalPersonRoleValuesFinder extends FormViewAwareUifKeyValuesFinderBase {
+
     private String forAddedPerson;
     private ParameterService parameterService;
-    
+
     /**
      * Looks up and returns the ParameterService.
-     * @return the parameter service. 
+     *
+     * @return the parameter service.
      */
     protected ParameterService getParameterService() {
         if (this.parameterService == null) {
-            this.parameterService = KraServiceLocator.getService(ParameterService.class);        
+            this.parameterService = KraServiceLocator.getService(ParameterService.class);
         }
         return this.parameterService;
     }
-    
+
     /**
      * @see org.kuali.rice.krad.keyvalues.KeyValuesBase#getKeyValues()
      */
@@ -60,7 +78,7 @@ public class ProposalPersonRoleValuesFinder extends FormViewAwareUifKeyValuesFin
         final boolean hasPrincipalInvestigator = getKeyPersonnelService().hasPrincipalInvestigator(document);
         List<KeyValue> keyValues = new ArrayList<KeyValue>();
         keyValues.add(new ConcreteKeyValue("", "select"));
-         for (ProposalPersonRole role : roles) {
+        for (ProposalPersonRole role : roles) {
             info("Adding role ", role.getProposalPersonRoleId());
             info("With description ", findRoleDescription(role, developmentProposal));
 
@@ -81,18 +99,20 @@ public class ProposalPersonRoleValuesFinder extends FormViewAwareUifKeyValuesFin
         }
         return keyValues;
     }
+
     protected String getRoleIdPrefix(DevelopmentProposal proposal) {
         return proposal.isSponsorNihMultiplePi() ? "nih." : "";
     }
 
     protected String findRoleDescription(ProposalPersonRole role, DevelopmentProposal proposal) {
-          return this.getParameterService().getParameterValueAsString(KC_GENERIC_PARAMETER_NAMESPACE, KC_ALL_PARAMETER_DETAIL_TYPE_CODE,
+        return this.getParameterService().getParameterValueAsString(KC_GENERIC_PARAMETER_NAMESPACE, KC_ALL_PARAMETER_DETAIL_TYPE_CODE,
                 PERSON_ROLE_PARAMETER_PREFIX + getRoleIdPrefix(proposal) + role.getProposalPersonRoleId().toLowerCase());
     }
 
     /**
-     * Locate from Spring a singleton instance of the <code>{@link KeyPersonnelService}</code>.
-     * 
+     * Locate from Spring a singleton instance of the
+     * <code>{@link KeyPersonnelService}</code>.
+     *
      * @return KeyPersonnelService
      */
     private KeyPersonnelService getKeyPersonnelService() {
@@ -100,8 +120,9 @@ public class ProposalPersonRoleValuesFinder extends FormViewAwareUifKeyValuesFin
     }
 
     /**
-     * Locate from Spring a singleton instance of the <code>{@link KeyValuesService}</code>.
-     * 
+     * Locate from Spring a singleton instance of the
+     * <code>{@link KeyValuesService}</code>.
+     *
      * @return KeyValuesService
      */
     private KeyValuesService getKeyValuesService() {
@@ -109,7 +130,7 @@ public class ProposalPersonRoleValuesFinder extends FormViewAwareUifKeyValuesFin
     }
 
     private Boolean isPersonAdded() {
-        return new Boolean(getForAddedPerson());
+        return Boolean.valueOf(getForAddedPerson());
     }
 
     public String getForAddedPerson() {
